--- a/JavaParser/pom.xml
+++ b/JavaParser/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.26.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
     </dependencies>
 
 </project>
